Reduce visibility, no need for concurrent HashMap in services,